--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "bunyan": "^1.8.15",
     "cors": "^2.8.5",
     "dms2dec": "^1.1.0",
     "express": "^4.17.1",
@@ -13,7 +14,9 @@
     "node-fetch": "^2.6.1",
     "xml-js": "^1.6.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
