--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Display VATSIM traffic on a map for a given set of FIRs",
   "main": "index.js",
   "dependencies": {
+    "@adobe/node-fetch-retry": "^1.1.1",
     "@turf/turf": "^6.5.0",
     "bunyan": "^1.8.15",
     "cors": "^2.8.5",
