--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-jest": "^27.0.6",
     "jest": "^27.0.6",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,5 +38,8 @@
   "bugs": {
     "url": "https://github.com/Kahn/vatsim-map/issues"
   },
-  "homepage": "https://github.com/Kahn/vatsim-map#readme"
+  "homepage": "https://github.com/Kahn/vatsim-map#readme",
+  "jest": {
+    "transform": {}
+  }
 }
