--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "query-overpass": "^1.5.5",
+    "rgb2hex": "^0.2.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
