--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@adobe/node-fetch-retry": "^1.1.1",
     "@turf/turf": "^6.5.0",
+    "async-mutex": "^0.3.2",
     "bunyan": "^1.8.15",
     "config": "^3.3.6",
     "cors": "^2.8.5",
