--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "serve": "node server.js"
   },
   "repository": {
     "type": "git",
