--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,3 +50,10 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           docker push $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+  
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been built and pushed to the Amazon ECR.'
